--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "php": ">=5.4.0",
         "zendframework/zend-escaper": "2.3.0",
-        "zendframework/zend-validator": "2.3.0"
+        "zendframework/zend-validator": "2.3.0",
+        "zendframework/zend-filter": "2.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
